fix: Adjust margin-left for page title in Project.scss for better alignment

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -322,7 +322,7 @@
     padding-right: 1em;
 
     h1.page-title {
-      margin-left: 20px;
+      margin-left: 60px;
       margin-top: 10px;
       text-align: start;
     }
